- Added (ext,helper)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,11 +27,11 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$KOTLIN_VERSION"
-    implementation "androidx.appcompat:appcompat:$APPCOMPAT_VERSION"
-    implementation "androidx.core:core-ktx:$APPCOMPAT_VERSION"
+    implementation "androidx.appcompat:appcompat:$APPCOMAT_VERSION"
+    implementation "androidx.core:core-ktx:$CORE_KTX_VERSION"
     implementation "androidx.constraintlayout:constraintlayout:$CONSTRIANT_VERSION"
 
-    implementation project(path :":baelui")
+    api project(path :":baelui")
 }
 
 dependencies {
