--- a/gradle.properties
+++ b/gradle.properties
@@ -28,7 +28,8 @@ KOTLIN_VERSION                  = 1.3.31
 SDK_VERSION                     = 28
 MIN_SDK_VERSION                 = 21
 
-APPCOMPAT_VERSION               = 1.0.2
+CORE_KTX_VERSION                = 1.1.0
+APPCOMAT_VERSION                = 1.1.0
 MATERIAL_VERSION                = 1.0.0
 CONSTRIANT_VERSION              = 1.1.3
 
