--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion SDK_VERSION as int
@@ -30,6 +31,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$APPCOMAT_VERSION"
     implementation "androidx.core:core-ktx:$CORE_KTX_VERSION"
     implementation "androidx.constraintlayout:constraintlayout:$CONSTRIANT_VERSION"
+    implementation "com.google.android.material:material:$MATERIAL_VERSION"
 
     api project(path :":baelui")
 }
