--- a/gradle.properties
+++ b/gradle.properties
@@ -28,10 +28,11 @@ KOTLIN_VERSION                  = 1.3.31
 SDK_VERSION                     = 28
 MIN_SDK_VERSION                 = 21
 
-CORE_KTX_VERSION                = 1.1.0
+CORE_KTX_VERSION                = 1.2.0
 APPCOMAT_VERSION                = 1.1.0
-MATERIAL_VERSION                = 1.0.0
+MATERIAL_VERSION                = 1.1.0
 CONSTRIANT_VERSION              = 1.1.3
+PAGING_VERSION                  = 2.1.2
 
 RUNNER_VERSION                  = 1.2.0
 JUNIT_VERSION                   = 4.12
